# github-workflows

./: .gitignore  CMakeLists.txt  README.md  hello.c  main.c
.github/workflows/: test-all.yml
